<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="550dp"
              android:layout_margin="16dp"
              android:weightSum="1">

    <TextView
            android:id="@+id/game_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_label"/>

    <EditText
            android:id="@+id/game_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/game_title"/>

    <TextView
            android:id="@+id/game_platform_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_platform_label"/>

    <EditText
            android:id="@+id/game_platform"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/notification_large_icon_height"
            android:hint="@string/game_list_platform"/>

    <TextView
            android:id="@+id/game_description_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_description_label"/>

    <EditText
            android:id="@+id/game_description"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/notification_large_icon_height"
            android:hint="@string/game_list_description"/>

    <Button
            android:id="@+id/completed_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <CheckBox
            android:id="@+id/todo_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_complete_label"/>

    <TextView
            android:id="@+id/games_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_complete"/>

</LinearLayout>